# gpubench

./: .gitignore  README.md  dotp_class_openacc.cpp  miniapp1.cpp  miniapp2-mpi.cpp  miniapp2-omp-b.cpp  miniapp2-omp.cpp  miniapp3-mpi.cpp  miniapp3-omp-b.cpp  miniapp3-omp.cpp
Part1_dotproduct/cpu/: Makefile  dotp_omp.cpp  init_omp.cpp  init_serial.cpp
Part1_dotproduct/cuda/: Makefile
Part1_dotproduct/hybrid/openacc/: ps_hybrid_acc.cpp  submit-viz.slurm
Part1_dotproduct/hybrid/openacc/Vincent/: submit.slurm
Part1_dotproduct/kokkos/: dotp_kokkos.cpp  init_kokkos.cpp
Part1_dotproduct/raja/: dotp_raja.cpp
Part2_mesh/cpu/: Makefile  mesh_omp.cpp  mesh_serial.cpp
Part2_mesh/kokkos/: CMakeLists.txt  dualview_dotp.cpp  functors_dotp.hpp  mesh_functors.hpp  mesh_kokkos.cpp
Part2_mesh/meshs/mesh_simples/: cube00.t  line00.t  res2d0p1.t  res3d0p2.t  square00.t
Part2_mesh/openacc/: Makefile  dotp_class_cpu.cpp  dotp_class_openacc.cpp  mesh_openacc.cpp
Part3_rand/: Makefile  rand_openacc.cpp  rand_openacc_2.cpp  rand_serial.cpp
app_to_benchmark/: miniapp2-omp.cpp  miniapp2.cpp  miniapp3-a.cpp
cpu/: dotp_serial.cpp
cuda/: dotp_cuda.cu  get_properties.cu  init_cuda.cu
hybrid/openacc/: run.sh  submit.slurm
hybrid/openacc/Vincent/: dotp_openacc.cpp
hybrid/openmp/: ps_hybrid_omp.cpp
kokkos/: CMakeLists.txt  init_kokkos_lambda.cpp
mpi/: ps_mpi.cpp  submit-turing.slurm  submit-viz.slurm
openacc/: Makefile  dotp_mpi_openacc.cpp  dotp_openacc.cpp  init_openacc.cpp  init_openacc_managed.cpp
raja/: CMakeLists.txt  init_raja.cpp
